[metadata]
name = plguincore
version = 1.0.0
author = pengcheng.chen
author_email = pengcheng.chen@edetek.com
description =  automation test helper
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
project_urls =
    Bug Tracker = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    PyYAML

python_requires = >=3.9

[options.package_data]
* = *.yaml

[options.packages.find]
where = src


