[metadata]
name = db_compare
version = 1.0.8
author = thcpc
author_email = redcpc@163.com
description =  automation test helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thcpc/cjen
project_urls =
    Bug Tracker = https://github.com/thcpc/cjen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 

python_requires = >=3.9

[options.package_data]
* = *.yaml, *.jinjia.html

[options.packages.find]
where = src
include=*
exclude=db_compare.tests