[metadata]
name = config_lib_1_0_0
version = 1.0.0
author = pengcheng.chen
author_email = pengcheng.chen@edetek.com
description =  The System config
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
project_urls =
    Bug Tracker = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
include_package_data = True
python_requires = >=3.9

[options.package_data]
* = *.yaml, resources/*.yaml

[options.packages.find]
where = src
include=config_lib_1_0_0
exclude=config_lib_1_0_0.unit_tests
[options.entry_points]
config_lib_1_0_0.plugin =
    config_lib = config_lib_1_0_0.config_lib_plugin:ConfigLibPlugin