[metadata]
name = db_compare_1_0_1
version = 1.0.0
author = thcpc
author_email = redcpc@163.com
description =  automation test helper
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
project_urls =
    Bug Tracker = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 

python_requires = >=3.9

[options.package_data]
* = *.yaml, *.jinjia.html

[options.packages.find]
where = src
include=db_compare_1_0_1
exclude=db_compare_1_0_1.tests
[options.entry_points]
db_compare_1_0_1.plugin =
    db_compare = db_compare_1_0_1.plugin:Plugin