[metadata]
name = diff_report_1_0_0
version = 1.0.0
author = pengcheng.chen
author_email = pengcheng.chen@edetek.com
description =  Output the diff report of data
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
project_urls =
    Bug Tracker = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
include_package_data = True
python_requires = >=3.9

[options.package_data]
* = *.yaml, resources/*.template.html

[options.packages.find]
where = src
include=diff_report_1_0_0
exclude=diff_report_1_0_0.unit_tests
[options.entry_points]
diff_report_1_0_0.plugin =
    diff_report = diff_report_1_0_0.diff_report_plugin:DiffReportPlugin